[gd_scene load_steps=5 format=3 uid="uid://ptu1aim2ejp"]

[ext_resource type="Texture2D" uid="uid://sulfgr8c7ux0" path="res://Assets/Sprites/UI/Ribbons/Ribbon_Blue_Connection_Down.png" id="1_ik1co"]
[ext_resource type="Texture2D" uid="uid://qllijsy67spc" path="res://Assets/Sprites/UI/Ribbons/Ribbon_Blue_Connection_Down_Pressed.png" id="2_q41ex"]
[ext_resource type="Script" path="res://Game/Worlds/level_button.gd" id="3_l36bb"]
[ext_resource type="Texture2D" uid="uid://cmjjq1v173wtd" path="res://Assets/Sprites/UI/Icons/star_empty.png" id="3_sdjgx"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_ik1co")
texture_pressed = ExtResource("2_q41ex")
stretch_mode = 5
script = ExtResource("3_l36bb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.414
anchor_right = 0.5
anchor_bottom = 0.44
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Star_01" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_sdjgx")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Star_02" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_sdjgx")

[node name="Star_03" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_sdjgx")
